added security, docker updated and some fixes