@@ -4,48 +4,32 @@ import com.booktracker.model.BookTracker;
 import com.booktracker.model.BookStatus;
 import com.booktracker.service.BookTrackerService;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.doNothing;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
 import java.time.LocalDateTime;
 import java.util.Collections;
-import java.util.List;
 
-import static org.mockito.Mockito.when;
-import static org.mockito.Mockito.doNothing;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-/**
- * Тесты для BookTrackerController, используя «чистый» Mockito
- * и standaloneSetup без @MockBean.
- */
-class BookTrackerControllerStandaloneTest {
+@WebMvcTest(com.booktracker.controller.BookTrackerController.class)
+public class BookTrackerControllerTest  {
 
-    @Mock
+    @Autowired
+    private MockMvc mockMvc;
+
+    @MockBean
     private BookTrackerService bookTrackerService;
 
-    private MockMvc mockMvc;
+    @Autowired
     private ObjectMapper objectMapper;
-
-    @BeforeEach
-    void setUp() {
-        // Инициализируем Mockito
-        MockitoAnnotations.openMocks(this);
-
-        // Создаём контроллер вручную и передаём в него замоканный сервис
-        com.booktracker.controller.BookTrackerController controller = new com.booktracker.controller.BookTrackerController(bookTrackerService);
-
-        // Настраиваем MockMvc в standalone-режиме
-        mockMvc = MockMvcBuilders.standaloneSetup(controller).build();
-
-        // Для сериализации/десериализации JSON (при необходимости)
-        objectMapper = new ObjectMapper();
-    }
 
     @Test
     void testCreateRecord() throws Exception {
@@ -55,10 +39,10 @@ class BookTrackerControllerStandaloneTest {
                 .bookId(bookId)
                 .status(BookStatus.FREE)
                 .build();
-
         when(bookTrackerService.createRecord(bookId)).thenReturn(tracker);
 
-        mockMvc.perform(post("/tracker/books/{bookId}", bookId))
+        mockMvc.perform(post("/tracker/books/{bookId}", bookId)
+                        .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.bookId").value(bookId))
                 .andExpect(jsonPath("$.status").value("FREE"));
@@ -71,7 +55,7 @@ class BookTrackerControllerStandaloneTest {
                 .bookId(100L)
                 .status(BookStatus.FREE)
                 .build();
-        when(bookTrackerService.getFreeBooks()).thenReturn(List.of(tracker));
+        when(bookTrackerService.getFreeBooks()).thenReturn(Collections.singletonList(tracker));
 
         mockMvc.perform(get("/tracker/books/free"))
                 .andExpect(status().isOk())
@@ -84,7 +68,6 @@ class BookTrackerControllerStandaloneTest {
         Long id = 1L;
         LocalDateTime borrowedAt = LocalDateTime.now();
         LocalDateTime returnBy = borrowedAt.plusDays(7);
-
         BookTracker updatedTracker = BookTracker.builder()
                 .id(id)
                 .bookId(100L)
@@ -92,28 +75,24 @@ class BookTrackerControllerStandaloneTest {
                 .borrowedAt(borrowedAt)
                 .returnBy(returnBy)
                 .build();
+        when(bookTrackerService.updateStatus(id, BookStatus.TAKEN, borrowedAt, returnBy))
+                .thenReturn(updatedTracker);
 
-        when(bookTrackerService.updateStatus(
-                id,
-                BookStatus.TAKEN,
-                borrowedAt,
-                returnBy
-        )).thenReturn(updatedTracker);
-
-        // Формируем запрос с параметрами borrowedAt и returnBy
         mockMvc.perform(put("/tracker/books/{id}", id)
                         .param("status", "TAKEN")
                         .param("borrowedAt", borrowedAt.toString())
-                        .param("returnBy", returnBy.toString()))
+                        .param("returnBy", returnBy.toString())
+                        .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.status").value("TAKEN"));
+                .andExpect(jsonPath("$.status").value("TAKEN"))
+                .andExpect(jsonPath("$.borrowedAt").value(borrowedAt.toString()))
+                .andExpect(jsonPath("$.returnBy").value(returnBy.toString()));
     }
 
     @Test
     void testDeleteRecord() throws Exception {
         Long id = 1L;
         doNothing().when(bookTrackerService).deleteRecord(id);
-
         mockMvc.perform(delete("/tracker/books/{id}", id))
                 .andExpect(status().isOk());
     }
